Fix accordingly to IDE warnings